src/App.css
#root {
  max-width: 430px;
  margin: 0 auto;
  /* padding: 2rem; */
  text-align: center;
  /* background: linear-gradient(
    to bottom,
    white 0%,
    white 50vh,
    rgb(245, 245, 245) 60vh,
    rgb(245, 245, 245) 100%
  ); */
  background-color: #1a1c21;
  padding-top: 60px;
}

.logo {
  height: 12em;
  width: auto;
  object-fit: contain;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

/* From here, custom css desings */
.wrapper {
  width: 100vw;
  max-width: 100%;
  padding: 20px;
  padding-top: 5px;
  box-sizing: border-box;
  min-height: calc(100vh - 60px);
  /* height: calc(100vh - 60px);
  overflow-y: scroll; */
}

.height_fixed_wrapper {
  width: 100vw;
  max-width: 100%;
  padding: 20px;
  padding-top: 5px;
  box-sizing: border-box;
  /* min-height: calc(100vh - 60px); */
  height: calc(100vh - 60px);
  overflow-y: scroll;
}

.header {
  flex: 0 0 auto; /* 고정 높이 */
  width: 100%;
  height: 60px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  position: fixed;
  top: 0;
  left: 0;
  padding-left: 10px;
  padding-right: 10px;
  box-sizing: border-box;

  /* background-color: #fff; */
  background-color: #1a1c21;
  z-index: 1100;
}

.flex-left {
  display: flex;
}

.gap5 {
  gap: 5px;
}

.fullWidth {
  width: 100%;
}

.fullHeight {
  height: 100%;
}

.announcementArea {
  height: 17vh;
  display: flex;
  flex-direction: row;
  overflow-x: auto;
  gap: 8px;
  scroll-snap-type: x mandatory; /* 있으면 부드러운 스냅 효과 */
}

.announcementDocument {
  width: 200px;

  flex-shrink: 0;
  height: 100% !important;
  background-color: #fac656;
  /* border: 1px rgba(146, 180, 167, 0.7) solid; */
  box-sizing: border-box;

  border-radius: 20px 20px 20px 20px;
  padding: 10px;
  display: flex;
  align-items: flex-start;
  flex-direction: column;

  white-space: pre-line;

  overflow: hidden;
}

.centeralize {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.fully_centeralize {
  display: flex;
  justify-content: center;
  align-items: center;
}

.fullSize {
  width: 100%;
  height: 100%;
}

.external_description_box {
  display: flex;
  flex-direction: column;
  padding-top: 3px;
  white-space: nowrap;
}

.external-linkbox {
  flex: 1; /* shrink 없음 + 고정 width */
  box-sizing: border-box;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.external-icon {
  width: 10vw;
  aspect-ratio: 1 / 1;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.external-icon img,
.external-icon svg,
.external-icon .emoji-box {
  width: 80%;
  height: 80%;
  object-fit: contain;
}

.emoji-box {
  width: 10vw;
  aspect-ratio: 1 / 1;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 8vw;
  line-height: 1;
  text-align: center;
}

.advertise {
  position: relative;
  padding: 10px;
  box-sizing: border-box;
  height: 80px;
  border-radius: 20px;
  background-color: #9b6a6c;
  /* border: 1px rgb(240, 240, 240) solid; */

  display: flex;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.advertise_content {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  z-index: 10;
}

.advertise_image-wrapper {
  position: absolute;
  display: flex;
  align-items: center;
  top: 0;
  right: 0;
  width: 100px;
  height: 100%;
  z-index: 0;
  opacity: 0.75; /* 흐리게 배경 효과 */
}

.advertise_image {
  width: 200%;
  height: auto;
  margin-left: -30px;
}

.boardPreview {
  width: 100%;
  background-color: #f5f5dc;
  border-radius: 10px;
  padding: 10px;
  box-sizing: border-box;
}

.boardCard {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  border-bottom: 0.5px gray solid;
  padding: 10px;
}

.leftBottom_floating {
  position: fixed;
  left: 20px;
  bottom: 20px;
}

.homebutton {
  border-radius: 50%;
  background-color: #fac656;
  width: 50px;
  height: 50px;
  margin: 10px;
}

.timetable {
  border: 1px #666 solid;
  border-radius: 10px;
}

.courseCard {
  padding: 12px !important;
}

.courseMark {
  position: absolute;
  right: 10px;
  bottom: 5px;
  display: flex;
  align-items: center;
}

.skeleton_style {
  background-color: rgba(255, 255, 255, 0.4) !important;
}

.course_preview {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  border-bottom: 0.5px grey solid;
  padding: 20px;
  padding-top: 4px;
  padding-bottom: 8px;
  transition: background-color 0.4s ease, max-height 0.4s ease;
  max-height: 100px;
  box-sizing: border-box;
}

.course_focus {
  background-color: rgba(250, 198, 86, 0.4);
  max-height: 300px;
}

.course_detail_btn {
  background-color: rgb(241, 42, 20);
  display: flex;
  padding: 4px 8px;
  border-radius: 12px;
}

.course_detail {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.course_detail .infobox {
  margin-top: 8px;
  white-space: pre-line;
  box-sizing: border-box;
}

.course_detail .section {
  margin-top: 12px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.activitySection {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 8px;
}

